Slides: add some

--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
                     <script type="text/template">
                         ## ASP.NET Core
 
+                        - гибрид ASP.NET MVC и WebAPI
                         - OWIN-подобная архитектура
                         - Kestrel — быстродействующий веб-сервер
-                        - можно запускать и на обычном .NET, и на .NET Core
+                        - можно запускать и на обычном .NET (IIS), и на .NET
+                          Core
                         - стабильная поддержка серверного Linux
                     </script>
                 </section>
@@ -93,6 +95,25 @@
                         ## Характеристики
 
                         ![htop](images/stability.png)
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text/template">
+                        ## JavaScriptServices
+
+                        - https://github.com/aspnet/JavaScriptServices
+                        - встраивание webpack в общий ресурсный конвеер ASP.NET
+                        - рендеринг Angular2 и React на сервере
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text/template">
+                        ## Средства разработки
+
+                        - Visual Studio 2017: разработка под Windows; поддержка
+                          отладки в Docker или по SSH
+                        - Visual Studio Code: поддержка разработки на других
+                          платформах
                     </script>
                 </section>
                 <section data-markdown>
