Slides: add .NET standard versions

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                 </section>
                 <section data-markdown>
                     <script type="text/template">
+                        ## .NET Standard
+
+                        ![Версии .NET Standard](images/net-standard-versions.png)
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text/template">
                         ## Поддерживаемые .NET Core операционные системы
 
                         - **Windows**:  7, 8, 8.1, 10
