Development tools: add Rider

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                           отладки в Docker или по SSH
                         - Visual Studio Code: поддержка разработки на других
                           платформах
+                        - JetBrains Rider: ReSharper + IDEA = ♥
                     </script>
                 </section>
                 <section data-markdown>
