Slides: update for .NET Standard and tooling

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         ## Архитектура .NET
 
                         ![Архитектура .NET](images/net-core-architecture.png)
+                        <small>
+                            (https://habrahabr.ru/company/microsoft/blog/323452/)
+                        </small>
                     </script>
                 </section>
                 <section data-markdown>
@@ -31,6 +34,26 @@
                         ## .NET Standard
 
                         ![Версии .NET Standard](images/net-standard-versions.png)
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text/template">
+                        ## .NET Standard 2.0
+
+                        ![Содержимое .NET Standard 2.0](images/net-standard-libraries.png)
+                        <small>
+                            (https://weblog.west-wind.com/posts/2016/Nov/23/NET-Standard-20-Making-Sense-of-NET-Again)
+                        </small>
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text/template">
+                        ## .NET Standard 2.0: Type Forwarding
+
+                        ![Перенаправление типов .NET Standard 2.0](images/net-standard-2.0-type-forwarding.png)
+                        <small>
+                            (https://weblog.west-wind.com/posts/2016/Nov/23/NET-Standard-20-Making-Sense-of-NET-Again)
+                        </small>
                     </script>
                 </section>
                 <section data-markdown>
