Platforms: add Docker info

--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
                 </section>
                 <section data-markdown>
                     <script type="text/template">
-                        ## Поддерживаемые .NET Core операционные системы
+                        ## Поддерживаемые .NET Core платформы
 
                         - **Windows**:  7, 8, 8.1, 10
                         - **Linux**: RHEL 7+, Ubuntu 14.04+, CentOS 7, Debian 8,
                           Fedora 23+, OpenSuse 13.2+, Oracle Linux 7+, Mint 17+
                         - **macOS**: 10.10+
+                        - **Docker**: `microsoft/dotnet:runtime`,
+                          `microsoft/dotnet:nanoserver-runtime`
                     </script>
                 </section>
                 <section data-markdown>
