Slides: add open-source information

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
                 </section>
                 <section data-markdown>
                     <script type="text/template">
+                        ## .NET: open-source
+
+                        - Runtime: https://github.com/dotnet/coreclr
+                        - Стандартная библиотека: https://github.com/dotnet/corefx
+                        - ASP.NET: https://github.com/aspnet/Mvc
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text/template">
                         ## .NET Standard
 
                         ![Версии .NET Standard](images/net-standard-versions.png)
