ASP.NET Core: add information about usage scenarios

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                         - можно запускать и на обычном .NET (IIS), и на .NET
                           Core
                         - стабильная поддержка серверного Linux
+                        - Microsoft рекомендует к использованию в сценариях, где
+                          нужна кроссплатформенность, микросервисы,
+                          контейнеризация, масштабирование
                     </script>
                 </section>
                 <section data-markdown>
