.NET Standard 2.0: add ship dates

--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
                 </section>
                 <section data-markdown>
                     <script type="text/template">
+                        ## Даты выпуска новых компонентов
+
+                        | **Milestone**             | **Release Date** |
+                        |:--------------------------|:-----------------|
+                        | .NET Core 2.0 Preview     | Q2 2017          |
+                        | .NET Standard 2.0 Preview | Q2 2017          |
+                        | .NET Core 2.0             | Q3 2017          |
+                        | .NET Standard 2.0         | Q3 2017          |
+
+                        <small>
+                            (https://github.com/dotnet/core/blob/master/roadmap.md)
+                        </small>
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text/template">
                         ## .NET Standard 2.0: Type Forwarding
 
                         ![Перенаправление типов .NET Standard 2.0](images/net-standard-2.0-type-forwarding.png)
