Slides: prepare comments

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <aside class="notes">
                             Поговорим об архитектуре .NET в том виде, в каком
                             его сегодня видят в Microsoft. Есть три основных
-                            направления развития: основной, старый добрый .NET
+                            современных варианта: основной, старый добрый .NET
                             под Windows, вариант поновее — Xamarin для мобильных
                             платформ, и совсем новый, только что появившийся
                             .NET Core. Все вместе они формируют экосистему,
@@ -62,6 +62,34 @@
                             Всё, что изображено на слайде, уже выпущено в релиз,
                             это уже можно встретить в NuGet и уже можно
                             пользоваться.
+                        </aside>
+                    </script>
+                </section>
+                <section data-markdown>
+                    <script type="text/template">
+                        ## Средства разработки
+
+                        - Visual Studio 2017: разработка под Windows; поддержка
+                          отладки в Docker или по SSH
+                        - Visual Studio Code: поддержка разработки на других
+                          платформах
+                        - JetBrains Rider: ReSharper + IDEA = ♥
+
+                        <aside class="notes">
+                            На сегодняшний момент основные инструменты для
+                            разработки под обычный .NET уже успели обзавестись
+                            средствами для интеграции с .NET Core — не всегда
+                            хорошими, но хоть какими-то. Microsoft продвигает
+                            Visual Studio для пользователей Windows и VS Code
+                            для пользователей других операционных систем.
+
+                            Ещё у них есть VS for Mac, но, как мне показалось,
+                            это больше для Xamarin, а не для серверной
+                            разработки, например.
+
+                            Помимо этого, многие наверняка слышали про новую IDE
+                            от JetBrains — Rider. Она также поддерживает
+                            программирование на .NET Core под всеми платформами.
                         </aside>
                     </script>
                 </section>
@@ -174,6 +202,10 @@
                             в частности, код сборщика мусора, насколько я
                             понимаю, тот же самый в .NET Core и в обычном .NET,
                             только собирается с разными флагами.
+
+                            Mono также начинает переносить себе основные
+                            компоненты из .NET Core, чтобы стать лучше и
+                            совместимее.
                         </aside>
                     </script>
                 </section>
@@ -255,6 +287,21 @@
                         - NuGet
                         - CoreCLR
                         - ASP.NET Core
+
+                        <aside class="notes">
+                            Сам по себе .NET Core состоит из различных
+                            компонентов. `dotnet-cli` — это инструменты
+                            управления окружением, пакетами и деплоймента (IDE
+                            может на них навинчиваться сверху). MSBuild — это,
+                            собственно, сборка проектов (MSBuild теперь, кстати,
+                            стал полностью кроссплатформенным). NuGet, как и
+                            раньше, предоставляет инфраструктуру для скачивания
+                            библиотек, CoreCLR — это, собственно, рантайм. Ну а
+                            ASP.NET Core — это новая версия ASP.NET, которая
+                            умеет работать и в старом режиме, под обычным .NET
+                            и на IIS, и в новом режиме — в виде self-host на
+                            кроссплатформенном .NET Core.
+                        </aside>
                     </script>
                 </section>
                 <section data-markdown>
@@ -262,6 +309,23 @@
                         ## dotnet-cli
 
                         ![Пример использования](images/dotnet-cli.png)
+
+                        <aside class="notes">
+                            Немного про `dotnet-cli`. Это консольный инструмент
+                            для того, чтобы работать с .NET Core-проектами. Это
+                            штука, которая умеет собирать проекты, скачивать
+                            зависимости и управлять установленными на машине
+                            рантаймами (которых можно теперь поставить
+                            несколько). Плюс в её инфраструктуру устанавливаются
+                            вещи типа EF Migrations, которые раньше с какого-то
+                            перепою нужно было выполнять в Package Manager
+                            Console.
+
+                            Видно, что часть задач, которые раньше выполняла
+                            исключительно Visual Studio, типа оркестрации сборки
+                            проекта, решили перенести сюда. Соответственно, и
+                            Visual Studio с этой системой работает, когда нужно.
+                        </aside>
                     </script>
                 </section>
                 <section data-markdown>
@@ -278,6 +342,29 @@
 
                         </Project>
                         ```
+
+                        <aside class="notes">
+                            Раз уж заговорили про сборку, вспомним, чем в
+                            Microsoft нас пугали некоторое время после начала
+                            работ над .NET Core. Грозились убрать старые
+                            проектные файлы и полностью выбросить MSBuild и
+                            привычные нам `csproj`-файлы, заменив его неким
+                            `project.json`. В первых превью-сборках так и
+                            поступили, но потом оказалось, что MSBuild на самом
+                            деле всем нравится, а для `csproj` написано
+                            неимоверное количество тулинга.
+
+                            Поэтому в итоге решили `project.json` упразднить, но
+                            вместе с тем значительно упростить модель проекта,
+                            используемую в `csproj`. Вот тут у меня записан
+                            пример `csproj`, который генерируется по умолчанию
+                            для проекта "Hello world". Если кто-нибудь раньше
+                            заглядывал в `csproj`, то без труда заметит разницу:
+                            теперь файл совершенно вменяемого размера, лишнего
+                            мусора в нём нет. Даже список файлов теперь для
+                            простых случаев не нужен — берётся всё, что в
+                            текущем каталоге (но можно кастомизировать).
+                        </aside>
                     </script>
                 </section>
                 <section data-markdown>
@@ -292,13 +379,37 @@
                         - Microsoft рекомендует к использованию в сценариях, где
                           нужна кроссплатформенность, микросервисы,
                           контейнеризация, масштабирование
-                    </script>
-                </section>
-                <section data-markdown>
-                    <script type="text/template">
-                        ## Характеристики
 
-                        ![htop](images/stability.png)
+                        <aside class="notes">
+                            Поскольку основное применение нового фреймворка —
+                            это кроссплатформенная веб-разработка, то Microsoft,
+                            конечно, особое внимание уделяет новому ASP.NET.
+
+                            Более того, весь фреймворк раньше называли просто
+                            "ASP.NET 5" — впрочем, от этого названия в итоге
+                            отказались.
+
+                            В целом старая архитектура более-менее сохранилась,
+                            и человек, который уже писал на ASP.NET 4 под OWIN,
+                            легко узнаёт похожие подходы. Из важных изменений —
+                            объединили MVC и WebAPI, но так даже удобнее стало
+                            работать.
+
+                            Хостить ASP.NET Core можно как отдельно, в виде
+                            self-host, так и по-старому — на IIS. Для self-host,
+                            кстати, сделали быстродействующий сервер Kestrel,
+                            который может потягаться с IIS даже в выполнении
+                            основных задач.
+
+                            В документации есть специальная страничка, которая
+                            описывает, когда, по мнению Microsoft, нам следует
+                            использовать ASP.NET Core. И там основными
+                            преимуществами указана кроссплатформенность (что
+                            понятно) и совместимость с контейнерами. А хорошая
+                            совместимость с контейнерами (как основанными на
+                            Windows, так и на Linux), по идее, значительно
+                            облегчает масштабирование сервисов.
+                        </aside>
                     </script>
                 </section>
                 <section data-markdown>
@@ -308,17 +419,41 @@
                         - https://github.com/aspnet/JavaScriptServices
                         - встраивание webpack в общий ресурсный конвеер ASP.NET
                         - рендеринг Angular2 и React на сервере
+
+                        <aside class="notes">
+                            Стоит упомянуть ещё одну фичу, которая доступна для
+                            ASP.NET Core — это библиотека JavaScriptServices.
+                            Она позволяет интегрировать всякие JavaScript'вые
+                            штуки с серверным кодом. Например, можно рендерить
+                            Angular2 или React-компоненты на стороне сервера, и
+                            таким образом обеспечивать изоморфность приложения.
+                        </aside>
                     </script>
+                </section>
                 </section>
                 <section data-markdown>
                     <script type="text/template">
-                        ## Средства разработки
+                        ## Характеристики
 
-                        - Visual Studio 2017: разработка под Windows; поддержка
-                          отладки в Docker или по SSH
-                        - Visual Studio Code: поддержка разработки на других
-                          платформах
-                        - JetBrains Rider: ReSharper + IDEA = ♥
+                        ![htop](images/stability.png)
+
+                        <aside class="notes">
+                            Ну и под конец скажу немного о стабильности нового
+                            фреймворка. На картинке приведены затраты ресурсов
+                            для функционирования двух простых небольших
+                            production веб-приложений, которые крутятся у меня
+                            на виртуальной машине в облаке.
+
+                            Главные характеристики тут потребление реальной
+                            оперативной памяти и процессорного времени. И видно,
+                            что .NET Core по обеим характеристикам выигрывает у
+                            Java — и это при том, что Java к тому же на этом
+                            хосте иногда падает из-за out of memory!
+
+                            В общем, .NET Core со своими задачами вполне
+                            справляется, и можно начинать небольшие приложения
+                            на нём выпускать в production.
+                        </aside>
                     </script>
                 </section>
                 <section data-markdown>
